Updated to read package from github

--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "cell_execution_strategy": "setup",
-      "include_colab_link": true
+      "cell_execution_strategy": "setup"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/KTH-dESA/Starter-Data-Kits/blob/main/OnSSET_SDK.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -55,73 +44,27 @@
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
+        "#%%capture\n",
         "# @title Setup {\"vertical-output\":true,\"display-mode\":\"form\"}\n",
         "# @markdown Run this cell for setting-up the connection to the database.\n",
         "# Install boto3 and localtileserver if not already installed\n",
         "\n",
         "!pip install --ignore-installed blinker\n",
-        "!pip install boto3 ipyleaflet leafmap localtileserver\n",
-        "!pip install awswrangler\n",
-        "!pip install pygadm\n",
-        "!pip install pycountry\n",
-        "!pip install osmnx\n",
+        "!pip install git+https://github.com/KTH-dESA/Starter-Data-Kits.git\n",
+        "# !pip install boto3 ipyleaflet leafmap localtileserver\n",
+        "# !pip install awswrangler\n",
+        "# !pip install pygadm\n",
+        "# !pip install pycountry\n",
+        "# !pip install osmnx\n",
         "\n",
         "from google.colab import userdata\n",
-        "import boto3\n",
         "import os\n",
-        "import awswrangler as wr\n",
+        "# import awswrangler as wr\n",
         "import ipywidgets as widgets\n",
         "from ipywidgets import Dropdown, Layout, SelectMultiple, Button, HBox, VBox\n",
         "from IPython.display import display\n",
         "from google.colab.output import eval_js\n",
-        "eval_js('google.colab.output.setIframeHeight(\"200\")')\n",
-        "\n",
-        "try:\n",
-        "  AWS_ACCESS_KEY_ID = userdata.get('AWS_ACCESS_KEY_ID')\n",
-        "  AWS_SECRET_ACCESS_KEY = userdata.get('AWS_SECRET_ACCESS_KEY')\n",
-        "except ImportError:\n",
-        "  AWS_ACCESS_KEY_ID = os.getenv('AWS_ACCESS_KEY_ID')\n",
-        "  AWS_SECRET_ACCESS_KEY = os.getenv('AWS_SECRET_ACCESS_KEY')\n",
-        "\n",
-        "\n",
-        "BUCKET_NAME = 'geospatialsdk'\n",
-        "\n",
-        "s3 = boto3.client(\n",
-        "    's3',\n",
-        "    aws_access_key_id=AWS_ACCESS_KEY_ID,\n",
-        "    aws_secret_access_key=AWS_SECRET_ACCESS_KEY\n",
-        ")\n",
-        "\n",
-        "\n",
-        "def download_data_from_s3(bucket_name, prefix, files):\n",
-        "  \"\"\"Downloads all GIS data for the selected country from the S3 bucket.\n",
-        "\n",
-        "  Args:\n",
-        "    bucket_name: The name of the S3 bucket.\n",
-        "    prefix: Prefix/folder path to download.\n",
-        "  \"\"\"\n",
-        "\n",
-        "  # Use paginator to handle large number of objects\n",
-        "  paginator = s3.get_paginator('list_objects_v2')\n",
-        "  pages = paginator.paginate(Bucket=bucket_name, Prefix=prefix)\n",
-        "\n",
-        "  for page in pages:\n",
-        "    for obj in page.get('Contents', []):\n",
-        "      key = obj['Key']\n",
-        "      file = key.split('/')[-1]\n",
-        "      if (file in files) or ('All' in files):\n",
-        "         # Extract the relative path to maintain directory structure\n",
-        "        rel_path = os.path.join('Data', file[0:3], key)\n",
-        "        # rel_path = rel_path.replace('Inputs/', '')\n",
-        "        # Create the local directory if it doesn't exist\n",
-        "        if rel_path:\n",
-        "          os.makedirs(os.path.dirname(rel_path), exist_ok=True)\n",
-        "        # Download the file\n",
-        "        s3.download_file(bucket_name, key, rel_path)\n",
-        "        print(f\"Downloaded: {key} to {rel_path}\")\n",
-        "      else:\n",
-        "        continue"
+        "eval_js('google.colab.output.setIframeHeight(\"200\")')"
       ]
     },
     {
@@ -130,11 +73,7 @@
         "# @title Select datasets to download {\"run\":\"auto\",\"vertical-output\":true}\n",
         "# @markdown Select the country to download data for:\n",
         "from IPython.display import HTML\n",
-        "import pygadm\n",
-        "import os\n",
-        "import osmnx as ox\n",
-        "import pycountry\n",
-        "import time\n",
+        "import starterkits as sdk\n",
         "\n",
         "# all road types\n",
         "all_road_types = [\n",
@@ -156,18 +95,11 @@
         "    \"tertiary\", \"tertiary_link\"\n",
         "]\n",
         "\n",
-        "def log(msg, start_time):\n",
-        "    \"\"\"Print message with elapsed time since start.\"\"\"\n",
-        "    elapsed = time.time() - start_time\n",
-        "    print(f\"[{elapsed:6.1f} sec] {msg}\")\n",
         "\n",
         "display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
         "\n",
-        "Country = \"BDI\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
+        "Country = \"Select country\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
         "# @markdown <br>Choose the datasets to downlow in the optios below:\n",
-        "\n",
-        "objects = s3.list_objects(Bucket=BUCKET_NAME, Prefix=f'OnSSET_specs')\n",
-        "files = {key['Key'].split('/')[-1][0:3]: key['Key'].split('/')[-1] for key in objects['Contents']}\n",
         "\n",
         "box_layout = widgets.Layout(display='flex',\n",
         "                            flex_flow='column',\n",
@@ -361,95 +293,28 @@
         "    roads_types.disabled = True\n",
         "\n",
         "def on_download_clicked(i):\n",
-        "  get_boundaries(Country)\n",
+        "  sdk.apis.get_boundaries(Country)\n",
         "  if specs_checkbox.value:\n",
-        "    download_data_from_s3(BUCKET_NAME, 'OnSSET_specs', files[Country])\n",
+        "    sdk.apis.get_specs(Country)\n",
         "  if pop_checkbox.value:\n",
-        "    get_population_data(Country, pop_radio.value)\n",
+        "    sdk.apis.get_population_data(Country, pop_radio.value)\n",
         "  if mv_checkbox.value:\n",
-        "    get_power_lines(Country)\n",
+        "    sdk.apis.get_power_lines(Country)\n",
         "    lines = gpd.read_file(f'Data/Africa_mv_lines.gpkg')\n",
         "    boundaries = gpd.read_file(f'Data/{Country}/Boundaries/{Country}_adm_0.gpkg')\n",
         "    boundaries = boundaries.to_crs(lines.crs)\n",
         "    lines = lines.clip(boundaries)\n",
         "    lines.to_file(f'Data/{Country}/MV lines/{Country}_mv_lines.gpkg', driver='GPKG')\n",
         "  if wind_checkbox.value:\n",
-        "    get_wind_data(Country, wind_radio.value)\n",
+        "    sdk.apis.get_wind_data(Country, wind_radio.value)\n",
         "  if solar_checkbox.value:\n",
-        "    get_solar_data(Country)\n",
+        "    sdk.apis.get_solar_data(Country)\n",
         "  if dem_checkbox.value:\n",
-        "    get_dem_data(Country)\n",
+        "    sdk.apis.get_dem_data(Country)\n",
         "  if ntl_checkbox.value:\n",
-        "    get_ntl_data(Country)\n",
+        "    sdk.apis.get_ntl_data(Country)\n",
         "  if roads_checkbox.value:\n",
         "    get_roads(Country, roads_types.value)\n",
-        "\n",
-        "def get_boundaries(country):\n",
-        "  os.makedirs(f'Data/{country}/Boundaries', exist_ok=True)\n",
-        "  country_name = pycountry.countries.get(alpha_3=country).name # type: ignore\n",
-        "  boundaries = pygadm.Items(country_name, content_level=0)\n",
-        "  boundaries.to_file(f'Data/{country}/Boundaries/{country}_adm_0.gpkg')\n",
-        "\n",
-        "def get_population_data(country, resolution):\n",
-        "  os.makedirs(f'Data/{Country}/Population', exist_ok=True)\n",
-        "  if resolution == '1km':\n",
-        "    !wget 'https://data.worldpop.org/GIS/Population/Global_2015_2030/R2025A/2023/{country}/v1/1km_ua/constrained/{country.lower()}_pop_2023_CN_1km_R2025A_UA_v1.tif' -O 'Data/{Country}/Population/{Country}_pop.tif'\n",
-        "  elif resolution == '100m':\n",
-        "    pass\n",
-        "\n",
-        "def get_power_lines(country):\n",
-        "  os.makedirs(f'Data/{Country}/MV lines', exist_ok=True)\n",
-        "  !wget 'https://zenodo.org/records/3628142/files/grid.gpkg' -O 'Data/Africa_mv_lines.gpkg'\n",
-        "\n",
-        "def get_wind_data(country, height):\n",
-        "  os.makedirs(f'Data/{Country}/Wind speed', exist_ok=True)\n",
-        "  !wget 'https://globalwindatlas.info/api/gis/country/{country}/wind-speed/{height}' -O 'Data/{Country}/Wind speed/{country}_wind_speed_{height}.tif'\n",
-        "\n",
-        "def get_solar_data(country):\n",
-        "  os.makedirs(f'Data/{Country}/Solar irradiation', exist_ok=True)\n",
-        "  country_name = pycountry.countries.get(alpha_3=country).name # type: ignore\n",
-        "  !wget \"https://api.globalsolaratlas.info/download/{country_name}/{country_name}_GISdata_LTAym_YearlyMonthlyTotals_GlobalSolarAtlas-v2_GEOTIFF.zip\" -O 'Data/{country}/Solar irradiation/{country}_solar_irradiance.tif'\n",
-        "\n",
-        "def get_dem_data(country):\n",
-        "  os.makedirs(f'Data/{Country}/Elevation', exist_ok=True)\n",
-        "  country_name = pycountry.countries.get(alpha_3=country).name # type: ignore\n",
-        "  boundaries = pygadm.Items(name=country_name, content_level=0)\n",
-        "  west, south, east, north = boundaries.total_bounds\n",
-        "  !wget 'https://portal.opentopography.org/API/globaldem?demtype=NASADEM&south={south}&north={north}&west={west}&east={east}&outputFormat=GTiff&API_Key=demoapikeyot2022' -O 'Data/{country}/Elevation/{country}_dem.tif'\n",
-        "\n",
-        "def get_ntl_data(country):\n",
-        "  os.makedirs(f'Data/{Country}/Nighttime lights', exist_ok=True)\n",
-        "  !wget 'https://data.worldpop.org/GIS/Covariates/Global_2015_2030/{country}/VIIRS/v1/fvf//{country.lower()}_viirs_fvf_2023_100m_v1.tif' -O 'Data/{country}/Nighttime lights/{country}_ntl.tif'\n",
-        "\n",
-        "def get_roads(country, road_types):\n",
-        "  os.makedirs(f'Data/{country}/Roads', exist_ok=True)\n",
-        "  output_dir = f'Data/{country}/Roads'\n",
-        "  country_start = time.time()\n",
-        "  try:\n",
-        "      # Get country name from ISO3\n",
-        "      country_name = pycountry.countries.get(alpha_3=country).name # type: ignore\n",
-        "      log(f\"Processing {country_name} ({country})\", country_start)\n",
-        "\n",
-        "      # Download road network as GeoDataFrame (edges only)\n",
-        "      G = ox.graph_from_place(country_name, network_type=\"drive\")\n",
-        "      gdf_edges = ox.graph_to_gdfs(G, nodes=False, edges=True)\n",
-        "\n",
-        "      # Filter by the desired highway types\n",
-        "      gdf_edges = gdf_edges[gdf_edges[\"highway\"].isin(road_types)]\n",
-        "      log(f\"Found {len(gdf_edges)} road segments.\", country_start)\n",
-        "\n",
-        "      # Define output path\n",
-        "      out_path = os.path.join(output_dir, f\"{country}_roads.gpkg\")\n",
-        "\n",
-        "      # Save shapefile\n",
-        "      if len(gdf_edges) > 0:\n",
-        "          gdf_edges.to_file(out_path)\n",
-        "          log(f\"Saved file to: {out_path}\", country_start)\n",
-        "      else:\n",
-        "          log(\"No roads found with the selected filters. Nothing saved.\", country_start)\n",
-        "\n",
-        "  except Exception as e:\n",
-        "      log(f\"Error processing {country}: {e}\", country_start)\n",
         "\n",
         "\n",
         "hr = widgets.HTML(value=\"<hr>\")\n",
@@ -842,79 +707,6 @@
       "metadata": {
         "id": "0clJ3kWOgi5m",
         "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import osmnx as ox\n",
-        "import pycountry\n",
-        "import time\n",
-        "\n",
-        "# all road types\n",
-        "all_road_types = [\n",
-        "    \"motorway\", \"motorway_link\",\n",
-        "    \"trunk\", \"trunk_link\",\n",
-        "    \"primary\", \"primary_link\",\n",
-        "    \"secondary\", \"secondary_link\",\n",
-        "    \"tertiary\", \"tertiary_link\",\n",
-        "    \"unclassified\", \"residential\",\n",
-        "    \"service\", \"living_street\"\n",
-        "]\n",
-        "\n",
-        "# Road types to keep\n",
-        "suggested_road_types = [\n",
-        "    \"motorway\", \"motorway_link\",\n",
-        "    \"trunk\", \"trunk_link\",\n",
-        "    \"primary\", \"primary_link\",\n",
-        "    \"secondary\", \"secondary_link\",\n",
-        "    \"tertiary\", \"tertiary_link\"\n",
-        "]\n",
-        "\n",
-        "road_types = suggested_road_types\n",
-        "\n",
-        "def log(msg, start_time):\n",
-        "    \"\"\"Print message with elapsed time since start.\"\"\"\n",
-        "    elapsed = time.time() - start_time\n",
-        "    print(f\"[{elapsed:6.1f} sec] {msg}\")\n",
-        "\n",
-        "def get_roads(iso3, output_dir):\n",
-        "    country_start = time.time()\n",
-        "    try:\n",
-        "        # Get country name from ISO3\n",
-        "        country = pycountry.countries.get(alpha_3=iso3).name # type: ignore\n",
-        "        log(f\"Processing {country} ({iso3})\", country_start)\n",
-        "\n",
-        "        # Download road network as GeoDataFrame (edges only)\n",
-        "        G = ox.graph_from_place(country, network_type=\"drive\")\n",
-        "        gdf_edges = ox.graph_to_gdfs(G, nodes=False, edges=True)\n",
-        "\n",
-        "        # Filter by the desired highway types\n",
-        "        gdf_edges = gdf_edges[gdf_edges[\"highway\"].isin(road_types)]\n",
-        "        log(f\"Found {len(gdf_edges)} road segments.\", country_start)\n",
-        "\n",
-        "        # Define output path\n",
-        "        out_dir = os.path.join(output_dir, iso3)\n",
-        "        os.makedirs(out_dir, exist_ok=True)\n",
-        "        out_path = os.path.join(out_dir, f\"{iso3}_roads.shp\")\n",
-        "\n",
-        "        # Save shapefile\n",
-        "        if len(gdf_edges) > 0:\n",
-        "            gdf_edges.to_file(out_path)\n",
-        "            log(f\"Saved shapefile to: {out_path}\", country_start)\n",
-        "        else:\n",
-        "            log(\"No roads found with the selected filters. Nothing saved.\", country_start)\n",
-        "\n",
-        "    except Exception as e:\n",
-        "        log(f\"Error processing {iso3}: {e}\", country_start)\n",
-        "\n",
-        "# get_roads('BEN', 'Roads')"
-      ],
-      "metadata": {
-        "id": "vLwZrSMQkdPO"
       },
       "execution_count": null,
       "outputs": []
