Updates to datasets visualization

--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -578,8 +578,8 @@
         "def get_datasets(country):\n",
         "  try:\n",
         "      datasets = {}\n",
-        "      datasets = {str(data).split('/')[-2]: str(data) for data in list(pathlib.Path(f'Data/{country}').rglob('*.tif'))}\n",
-        "      datasets.update({str(data).split('/')[-2]: str(data) for data in list(pathlib.Path(f'Data/{country}').rglob('*.geojson'))})\n",
+        "      datasets = {str(data).split('/')[-1]: str(data) for data in list(pathlib.Path(f'Data/{country}').rglob('*.tif'))}\n",
+        "      datasets.update({str(data).split('/')[-1]: str(data) for data in list(pathlib.Path(f'Data/{country}').rglob('*.geojson'))})\n",
         "  except:\n",
         "    pass\n",
         "  return datasets\n",
@@ -604,7 +604,7 @@
         "\n",
         "  return files, scenario_data\n",
         "\n",
-        "Visualize = \"GIS data\" # @param [\"Select data type\",\"GIS data\",\"Scenario data\"]\n",
+        "Visualize = \"Select data type\" # @param [\"Select data type\",\"GIS data\",\"Scenario data\"]\n",
         "if Visualize == 'Select data type':\n",
         "    print('Please select a data type')\n",
         "else:\n",
