Added land cover dataset

--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -49,13 +49,24 @@
         "# @markdown Run this cell for setting-up the connection to the database.\n",
         "# Install boto3 and localtileserver if not already installed\n",
         "\n",
-        "!pip install --ignore-installed blinker tqdm\n",
-        "!pip install git+https://github.com/ClimateCompatibleGrowth/Starter-Data-Kits.git\n",
-        "!pip install ipyleaflet leafmap localtileserver\n",
-        "# !pip install awswrangler\n",
-        "# !pip install pygadm\n",
-        "# !pip install pycountry\n",
-        "# !pip install osmnx\n",
+        "import subprocess\n",
+        "from IPython.display import clear_output\n",
+        "\n",
+        "def run_quiet_shell(command):\n",
+        "    # Start the process\n",
+        "    process = subprocess.Popen(command, shell=True, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, text=True)\n",
+        "\n",
+        "    # Read output line by line as it happens\n",
+        "    for line in process.stdout:\n",
+        "        clear_output(wait=True)\n",
+        "        print(line.strip())\n",
+        "\n",
+        "    process.wait()\n",
+        "\n",
+        "# Usage:\n",
+        "run_quiet_shell(\"pip install --ignore-installed blinker tqdm --upgrade\")\n",
+        "run_quiet_shell(\"pip install git+https://github.com/ClimateCompatibleGrowth/Starter-Data-Kits.git --upgrade\")\n",
+        "run_quiet_shell(\"pip install ipyleaflet leafmap localtileserver --upgrade\")\n",
         "\n",
         "from google.colab import userdata\n",
         "import os\n",
@@ -69,7 +80,8 @@
         "import geopandas as gpd\n",
         "from tqdm.notebook import tqdm\n",
         "import glob\n",
-        "# eval_js('google.colab.output.setIframeHeight(\"200\")')"
+        "\n",
+        "print('Setup complete')"
       ]
     },
     {
@@ -99,10 +111,10 @@
         "]\n",
         "\n",
         "\n",
-        "display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
+        "display(HTML(''' '''))\n",
         "\n",
         "Country = \"Select country\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
-        "# @markdown <br>Choose the datasets to download in the optios below:\n",
+        "# @markdown Choose the datasets to download in the optios below:\n",
         "\n",
         "box_layout = widgets.Layout(display='flex',\n",
         "                            flex_flow='column',\n",
@@ -111,7 +123,7 @@
         "\n",
         "# Create the widget\n",
         "pop_checkbox = widgets.Checkbox(\n",
-        "    description='<b>Population count</b>', # Label\n",
+        "    description='Population count', # Label\n",
         "    value=False,                            # Default value\n",
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
@@ -119,7 +131,7 @@
         "\n",
         "pop_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
-        "    options=['Worldpop', 'GHSL'],\n",
+        "    options=['Worldpop'], # 'GHSL'\n",
         "    disabled=True\n",
         ")\n",
         "\n",
@@ -132,7 +144,7 @@
         "pop_box = VBox([pop_checkbox, HBox([pop_dropdown, pop_radio])])\n",
         "\n",
         "mv_checkbox = widgets.Checkbox(\n",
-        "    description='<b>Medium voltage lines</b>', # Label\n",
+        "    description='Medium voltage lines', # Label\n",
         "    value=False,                            # Default value\n",
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
@@ -140,14 +152,14 @@
         "\n",
         "mv_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
-        "    options=['GridFinder', 'energydata.info'],\n",
+        "    options=['GridFinder'], # 'energydata.info'\n",
         "    disabled=True\n",
         ")\n",
         "\n",
         "mv_box = VBox([mv_checkbox, HBox([mv_dropdown])])\n",
         "\n",
         "wind_checkbox = widgets.Checkbox(\n",
-        "    description='<b>Wind speed</b>', # Label\n",
+        "    description='Wind speed', # Label\n",
         "    value=False,                            # Default value\n",
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
@@ -168,7 +180,7 @@
         "wind_box = VBox([wind_checkbox, HBox([wind_dropdown, wind_radio])])\n",
         "\n",
         "solar_checkbox = widgets.Checkbox(\n",
-        "    description='<b>Solar irradiation</b>', # Label\n",
+        "    description='Solar irradiation', # Label\n",
         "    value=False,                            # Default value\n",
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
@@ -183,14 +195,14 @@
         "solar_box = VBox([solar_checkbox, HBox([solar_dropdown])])\n",
         "\n",
         "specs_checkbox = widgets.Checkbox(\n",
-        "    description='<b>Socio-economic specifications</b>', # Label\n",
+        "    description='Socio-economic specifications', # Label\n",
         "    value=False,                            # Default value\n",
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
         ")\n",
         "\n",
         "dem_checkbox = widgets.Checkbox(\n",
-        "    description='<b>Elevation model</b>', # Label\n",
+        "    description='Elevation model', # Label\n",
         "    value=False,                            # Default value\n",
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
@@ -198,7 +210,7 @@
         "\n",
         "dem_description = widgets.HTML('Digital Model Data is downloaded from the ' +\n",
         "                               'OpenTopography project, for which you need an API key. ' +\n",
-        "                               'Please go to <a href=\"https://opentopography.org\">https://opentopography.org</a> create a ' +\n",
+        "                               'Please go to https://opentopography.org create a ' +\n",
         "                               'free account and generate an API key. Copy the ' +\n",
         "                               'and paste it in the field below.', layout=Layout(width='700px'))\n",
         "\n",
@@ -217,8 +229,44 @@
         "\n",
         "dem_box = VBox([dem_checkbox, dem_description, HBox([dem_dropdown, dem_api])])\n",
         "\n",
+        "land_checkbox = widgets.Checkbox(\n",
+        "    description='Land cover', # Label\n",
+        "    value=False,                            # Default value\n",
+        "    disabled=False,                         # Whether to disable user changes\n",
+        "    indent=False\n",
+        ")\n",
+        "\n",
+        "land_description = widgets.HTML('Land Cover Data is downloaded from ' +\n",
+        "                               'Nasa Earth data, for which you need a user a password. ' +\n",
+        "                               'Please go to https://urs.earthdata.nasa.gov/home create a ' +\n",
+        "                               'free account and fill the login credentials.', layout=Layout(width='700px'))\n",
+        "\n",
+        "land_dropdown = widgets.Dropdown(\n",
+        "    description='Dataset',\n",
+        "    options=['MODIS (MCD12Q1)'],\n",
+        "    disabled=True\n",
+        ")\n",
+        "\n",
+        "land_user = widgets.Text(\n",
+        "    value='',\n",
+        "    placeholder='Enter username',\n",
+        "    description='Username:',\n",
+        "    disabled=True\n",
+        ")\n",
+        "\n",
+        "land_password = widgets.Text(\n",
+        "    value='',\n",
+        "    placeholder='Enter password',\n",
+        "    description='password:',\n",
+        "    disabled=True\n",
+        ")\n",
+        "\n",
+        "land_box = VBox([land_checkbox, land_description, HBox([land_dropdown,\n",
+        "                                                        VBox([land_user,\n",
+        "                                                              land_password])])])\n",
+        "\n",
         "ntl_checkbox = widgets.Checkbox(\n",
-        "    description='<b>Nighttime lights</b>', # Label\n",
+        "    description='Nighttime lights', # Label\n",
         "    value=False,                            # Default value\n",
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
@@ -233,7 +281,7 @@
         "ntl_box = VBox([ntl_checkbox, HBox([ntl_dropdown])])\n",
         "\n",
         "roads_checkbox = widgets.Checkbox(\n",
-        "    description='<b>Roads</b>', # Label\n",
+        "    description='Roads', # Label\n",
         "    value=False,                            # Default value\n",
         "    disabled=False,                         # Whether to disable user changes\n",
         "    indent=False                             # Align with other controls with a description\n",
@@ -296,6 +344,16 @@
         "    dem_dropdown.disabled = True\n",
         "    dem_api.disabled = True\n",
         "\n",
+        "def on_land_checkbox_changed(i):\n",
+        "  if land_checkbox.value:\n",
+        "    land_dropdown.disabled = False\n",
+        "    land_user.disabled = False\n",
+        "    land_password.disabled = False\n",
+        "  else:\n",
+        "    land_dropdown.disabled = True\n",
+        "    land_user.disabled = True\n",
+        "    land_password.disabled = True\n",
+        "\n",
         "def on_ntl_checkbox_changed(i):\n",
         "  if ntl_checkbox.value:\n",
         "    ntl_dropdown.disabled = False\n",
@@ -324,6 +382,8 @@
         "  if solar_checkbox.value:\n",
         "    total_downloads += 1\n",
         "  if dem_checkbox.value:\n",
+        "    total_downloads += 1\n",
+        "  if land_checkbox.value:\n",
         "    total_downloads += 1\n",
         "  if ntl_checkbox.value:\n",
         "    total_downloads += 1\n",
@@ -359,6 +419,11 @@
         "      sdk.apis.get_dem_data(Country, dem_api.value)\n",
         "      pbar.update(1)\n",
         "      pbar.set_description(\"Downloading elevation model data\")\n",
+        "    if land_checkbox.value:\n",
+        "      sdk.apis.get_landcover_data(country=Country, username=land_user.value,\n",
+        "                                  password=land_password.value)\n",
+        "      pbar.update(1)\n",
+        "      pbar.set_description(\"Downloading land cover data\")\n",
         "    if ntl_checkbox.value:\n",
         "      sdk.apis.get_ntl_data(Country)\n",
         "      pbar.update(1)\n",
@@ -367,15 +432,17 @@
         "      sdk.apis.get_roads(Country) # , roads_types.value)\n",
         "      pbar.update(1)\n",
         "      pbar.set_description(\"Downloading roads data\")\n",
-        "\n",
+        "    print('\\033[1mData downloaded succesfully to session\\033[0m')\n",
         "\n",
         "hr = widgets.HTML(value=\"<hr>\")\n",
+        "space = widgets.HTML(value=\"<br>\")\n",
         "\n",
         "pop_checkbox.observe(on_pop_checkbox_changed, names='value')\n",
         "mv_checkbox.observe(on_mv_checkbox_changed, names='value')\n",
         "wind_checkbox.observe(on_wind_checkbox_changed, names='value')\n",
         "solar_checkbox.observe(on_solar_checkbox_changed, names='value')\n",
         "dem_checkbox.observe(on_dem_checkbox_changed, names='value')\n",
+        "land_checkbox.observe(on_land_checkbox_changed, names='value')\n",
         "ntl_checkbox.observe(on_ntl_checkbox_changed, names='value')\n",
         "roads_checkbox.observe(on_roads_checkbox_changed, names='value')\n",
         "download.on_click(on_download_clicked)\n",
@@ -383,10 +450,11 @@
         "# Display the widget\n",
         "if Country != 'Select country':\n",
         "  display(VBox([specs_checkbox, hr, pop_box, hr, mv_box, hr, wind_box, hr,\n",
-        "                solar_box, hr, dem_box, hr, ntl_box, hr, roads_box,\n",
-        "                hr, download]))\n",
+        "                solar_box, hr, dem_box, hr, land_box, hr, ntl_box, hr, roads_box,\n",
+        "                space, download]))\n",
         "else:\n",
-        "  print('Please select a country')"
+        "  print('Please select a country')\n",
+        ""
       ],
       "metadata": {
         "id": "tjKveZd7QUAf",
