Earth data conection

--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -37,16 +37,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
-        "id": "ybz0U1fqgOP9"
+        "id": "ybz0U1fqgOP9",
+        "outputId": "4601868f-1bcc-446f-b9af-8544b898471b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 456
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed Flask-Caching-2.3.1 aniso8601-10.0.1 cachelib-0.13.0 color-operations-0.2.0 duckdb-1.4.4 eval-type-backport-0.3.1 flask-cors-6.0.2 flask-restx-1.3.2 geojson-3.2.0 ipyvue-1.12.0 ipyvuetify-1.11.3 jedi-0.19.2 leafmap-0.60.0 localtileserver-0.10.7 maplibre-0.3.6 morecantile-7.0.3 pystac-1.14.3 pystac-client-0.9.0 rio-cogeo-7.0.1 rio-tiler-8.0.5 server-thread-0.3.0 whitebox-2.3.6 whiteboxgui-2.3.0\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'ex' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/starterkits/utils.py\u001b[0m in \u001b[0;36mauthenticate_nasa_earth\u001b[0;34m(username, password)\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m             \u001b[0mearthaccess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpersistent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: login() got an unexpected keyword argument 'persistent'",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3403629240.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m \u001b[0msdk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mauthenticate_nasa_earth\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mUsername\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPassword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/starterkits/utils.py\u001b[0m in \u001b[0;36mauthenticate_nasa_earth\u001b[0;34m(username, password)\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0mearthaccess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpersistent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0;32mexcept\u001b[0m \u001b[0mex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m            \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No username or password provided for Nasa Earthaccess, the landcover and elevation data will be skiped.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m            \u001b[0;32mreturn\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'ex' is not defined"
+          ]
+        }
+      ],
       "source": [
         "#%%capture\n",
         "# @title Setup {\"vertical-output\":true,\"display-mode\":\"form\"}\n",
         "# @markdown Run this cell for setting-up the connection to the database.\n",
+        "\n",
+        "# @markdown Setup the connection to NASA Earth data:\n",
+        "Username = \"camilorg@kth.se\" # @param {\"type\":\"string\",\"placeholder\":\"Enter NASA Earth username\"}\n",
+        "Password = \"LvWm!UdsD#K9u2L\" # @param {\"type\":\"string\",\"placeholder\":\"Enter NASA Earth password\"}\n",
         "# Install boto3 and localtileserver if not already installed\n",
         "\n",
         "import subprocess\n",
@@ -81,6 +114,8 @@
         "from tqdm.notebook import tqdm\n",
         "import glob\n",
         "\n",
+        "sdk.utils.authenticate_nasa_earth(Username, Password)\n",
+        "\n",
         "print('Setup complete')"
       ]
     },
@@ -113,7 +148,7 @@
         "\n",
         "display(HTML(''' '''))\n",
         "\n",
-        "Country = \"Select country\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
+        "Country = \"BEN\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
         "# @markdown Choose the datasets to download in the optios below:\n",
         "\n",
         "box_layout = widgets.Layout(display='flex',\n",
@@ -416,12 +451,11 @@
         "      pbar.update(1)\n",
         "      pbar.set_description(\"Downloading solar irradiation data\")\n",
         "    if dem_checkbox.value:\n",
-        "      sdk.apis.get_dem_data(Country, dem_api.value)\n",
+        "      sdk.apis.get_dem_data(Country)\n",
         "      pbar.update(1)\n",
         "      pbar.set_description(\"Downloading elevation model data\")\n",
         "    if land_checkbox.value:\n",
-        "      sdk.apis.get_landcover_data(country=Country, username=land_user.value,\n",
-        "                                  password=land_password.value)\n",
+        "      sdk.apis.get_landcover_data(country=Country)\n",
         "      pbar.update(1)\n",
         "      pbar.set_description(\"Downloading land cover data\")\n",
         "    if ntl_checkbox.value:\n",
@@ -453,8 +487,7 @@
         "                solar_box, hr, dem_box, hr, land_box, hr, ntl_box, hr, roads_box,\n",
         "                space, download]))\n",
         "else:\n",
-        "  print('Please select a country')\n",
-        ""
+        "  print('Please select a country')\n"
       ],
       "metadata": {
         "id": "tjKveZd7QUAf",
